Port to 1.18.2 (by Mrbysco)